libclamav/clamav.h

/**
 * @brief Return codes used by libclamav functions.
 */
typedef enum cl_error_t {
    /* libclamav specific */
    CL_CLEAN   = 0,
    CL_SUCCESS = 0,
    CL_VIRUS,
    CL_ENULLARG,
    CL_EARG,
    CL_EMALFDB,
    CL_ECVD,
    CL_EVERIFY,
    CL_EUNPACK,

    /* I/O and memory errors */
    CL_EOPEN,
    CL_ECREAT,
    CL_EUNLINK,
    CL_ESTAT,
    CL_EREAD,
    CL_ESEEK,
    CL_EWRITE,
    CL_EDUP,
    CL_EACCES,
    CL_ETMPFILE,
    CL_ETMPDIR,
    CL_EMAP,
    CL_EMEM,
    CL_ETIMEOUT,

    /* internal (not reported outside libclamav) */
    CL_BREAK,
    CL_EMAXREC,
    CL_EMAXSIZE,
    CL_EMAXFILES,
    CL_EFORMAT,
    CL_EPARSE,
    CL_EBYTECODE,          /** may be reported in testmode */
    CL_EBYTECODE_TESTFAIL, /** may be reported in testmode */
    CL_ELOCK,
    CL_EBUSY,
    CL_ESTATE,

    CL_VERIFIED, /** The scan target has been deemed trusted */
    CL_ERROR,    /** Unspecified / generic error */

    /* no error codes below this line please */
    CL_ELAST_ERROR
} cl_error_t;
// clang-format on

struct cl_engine;
/**
 * @brief File inspection callback.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 * Use `CL_SCAN_CALLBACK_PRE_SCAN` with `cl_engine_set_scan_callback()` instead.
 *
 * You can use the `cl_fmap_*` functions to access the file map, file name, file size, file contents,
 * and those of each ancestor layers (if any).
 *
 * Called for each NEW file (inner and outer).
 * Provides capability to record embedded file information during a scan.
 *
 * @param fd                  Current file descriptor which is about to be scanned.
 * @param type                Current file type detected via magic - i.e. NOT on the fly - (e.g. "CL_TYPE_MSEXE").
 * @param ancestors           An array of ancestors filenames of size `recursion_level`. filenames may be NULL.
 * @param parent_file_size    Parent file size.
 * @param file_name           Current file name, or NULL if the file does not have a name or ClamAV failed to record the name.
 * @param file_size           Current file size.
 * @param file_buffer         Current file buffer pointer.
 * @param recursion_level     Recursion level / depth of the current file.
 * @param layer_attributes    See LAYER_ATTRIBUTES_* flags.
 * @param context             Opaque application provided data.
 * @return                    CL_SUCCESS = File is scanned.
 * @return                    CL_BREAK = Whitelisted by callback - file is skipped and marked as clean.
 * @return                    CL_VIRUS = Blacklisted by callback - file is skipped and marked as infected.
 */
typedef cl_error_t (*clcb_file_inspection)(
    int fd,
    const char *type,
    const char **ancestors,
    size_t parent_file_size,
    const char *file_name,
    size_t file_size,
    const char *file_buffer,
    uint32_t recursion_level,
    uint32_t layer_attributes,
    void *context);
/**
 * @brief Set a custom file inspection callback function.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 * Use `CL_SCAN_CALLBACK_PRE_SCAN` with `cl_engine_set_scan_callback()` instead.
 *
 * DISCLAIMER: This interface is to be considered unstable while we continue to evaluate it.
 * We may change this interface in the future.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine.
 * @param callback  The callback function pointer.
 */
extern void cl_engine_set_clcb_file_inspection(struct cl_engine *engine, clcb_file_inspection callback);
/**
 * @brief Pre-scan callback.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 *
 * Called for each NEW file (inner and outer) before the scanning takes place. This is
 * roughly the same as clcb_before_cache, but it is affected by clean file caching.
 * This means that it won't be called if a clean cached file (inner or outer) is
 * scanned a second time.
 *
 * @param fd        File descriptor which is about to be scanned.
 * @param type      File type detected via magic - i.e. NOT on the fly - (e.g. "CL_TYPE_MSEXE").
 * @param context   Opaque application provided data.
 * @return          CL_SUCCESS = File is scanned.
 * @return          CL_BREAK = Allowed by callback - file is skipped and marked as clean.
 * @return          CL_VIRUS = Blocked by callback - file is skipped and marked as infected.
 */
typedef cl_error_t (*clcb_pre_scan)(int fd, const char *type, void *context);
/**
 * @brief Set a custom pre-scan callback function.
 * Use `CL_SCAN_CALLBACK_PRE_SCAN` with `cl_engine_set_scan_callback()` instead.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine.
 * @param callback  The callback function pointer.
 */
extern void cl_engine_set_clcb_pre_scan(struct cl_engine *engine, clcb_pre_scan callback);
/**
 * @brief Post-scan callback.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 * Use `CL_SCAN_CALLBACK_PRE_SCAN` with `cl_engine_set_scan_callback()` instead.
 *
 * Called for each processed file (inner and outer), after the scanning is complete.
 * In all-match mode, the virname will be one of the matches, but there is no
 * guarantee in which order the matches will occur, thus the final virname may
 * be any one of the matches.
 *
 * @param fd        File descriptor which was scanned.
 * @param result    The scan result for the file.
 * @param virname   A signature name if there was one or more matches.
 * @param context   Opaque application provided data.
 * @return          CL_SUCCESS = File is scanned.
 * @return          CL_BREAK = Allowed by callback - file is skipped and marked as clean.
 * @return          CL_VIRUS = Blocked by callback - file is skipped and marked as infected.
 */
typedef cl_error_t (*clcb_post_scan)(int fd, int result, const char *virname, void *context);
/**
 * @brief Set a custom post-scan callback function.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine.
 * @param callback  The callback function pointer.
 */
extern void cl_engine_set_clcb_post_scan(struct cl_engine *engine, clcb_post_scan callback);
/**
 * @brief Virus-found callback.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 * Use `CL_SCAN_CALLBACK_ALERT` with `cl_engine_set_scan_callback()` instead.
 *
 * Called for each signature match.
 * If all-match is enabled, clcb_virus_found() may be called multiple times per
 * scan.
 *
 * In addition, clcb_virus_found() does not have a return value and thus.
 * can not be used to ignore the match.
 *
 * @param fd        File descriptor which was scanned.
 * @param virname   Virus name.
 * @param context   Opaque application provided data.
 */
typedef void (*clcb_virus_found)(int fd, const char *virname, void *context);
/**
 * @brief Set a custom virus-found callback function.
 * Use `CL_SCAN_CALLBACK_ALERT` with `cl_engine_set_scan_callback()` instead.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine.
 * @param callback  The callback function pointer.
 */
extern void cl_engine_set_clcb_virus_found(struct cl_engine *engine, clcb_virus_found callback);
/**
 * @brief Signature-load callback.
 *
 * May be used to ignore signatures at database load time.
 *
 * WARNING: Some signatures (notably ldb, cbc) can be dependent upon other signatures.
 *          Failure to preserve dependency chains will result in database loading failure.
 *          It is the implementor's responsibility to guarantee consistency.
 *
 * @param type      The signature type (e.g. "db", "ndb", "mdb", etc.)
 * @param name      Signature name.
 * @param custom    The signature is official (custom == 0) or custom (custom != 0)
 * @param context   Opaque application provided data
 * @return          0 to load the current signature.
 * @return          Non-0 to skip the current signature.
 */
typedef int (*clcb_sigload)(const char *type, const char *name, unsigned int custom, void *context);
/**
 * @brief Set a custom signature-load callback function.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine.
 * @param callback  The callback function pointer.
 * @param context   Opaque application provided data.
 */
extern void cl_engine_set_clcb_sigload(struct cl_engine *engine, clcb_sigload callback, void *context);
enum cl_msg {
    /* leave room for more message levels in the future */
    CL_MSG_INFO_VERBOSE = 32, /* verbose */
    CL_MSG_WARN         = 64, /* LibClamAV WARNING: */
    CL_MSG_ERROR        = 128 /* LibClamAV ERROR: */
};
/**
 * @brief Progress callback for sig-load, engine-compile, and engine-free.
 *
 * Progress is complete when total_items == now_completed.
 *
 * Note: The callback should return CL_SUCCESS. We reserve the right to have it
 *       cancel the operation in the future if you return something else...
 *       ... but for now, the return value will be ignored.
 *
 * @param total_items   Total number of items
 * @param now_completed Number of items completed
 * @param context       Opaque application provided data
 * @return cl_error_t   reserved for future use
 */
typedef cl_error_t (*clcb_progress)(size_t total_items, size_t now_completed, void *context);
/**
 * @brief Set a progress callback function to be called incrementally during a
 * database load.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine
 * @param callback  The callback function pointer
 * @param context   Opaque application provided data
 */
extern void cl_engine_set_clcb_sigload_progress(struct cl_engine *engine, clcb_progress callback, void *context);
/**
 * @brief Set a progress callback function to be called incrementally during an
 * engine compile.
 *
 * Disclaimer: the number of items for this is a rough estimate of the items that
 * tend to take longest to compile and doesn't represent an accurate number of
 * things compiled.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine
 * @param callback  The callback function pointer
 * @param context   Opaque application provided data
 */
extern void cl_engine_set_clcb_engine_compile_progress(struct cl_engine *engine, clcb_progress callback, void *context);
/**
 * @brief Set a progress callback function to be called incrementally during an
 * engine free (if the engine is in fact freed).
 *
 * Disclaimer: the number of items for this is a rough estimate of the items that
 * tend to take longest to free and doesn't represent an accurate number of
 * things freed.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine
 * @param callback  The callback function pointer
 * @param context   Opaque application provided data
 */
extern void cl_engine_set_clcb_engine_free_progress(struct cl_engine *engine, clcb_progress callback, void *context);