clamav-sys/no-libclang/bindings.rs

#[doc = " @brief File inspection callback.\n\n DISCLAIMER: This interface is to be considered unstable while we continue to evaluate it.\n We may change this interface in the future.\n\n Called for each NEW file (inner and outer).\n Provides capability to record embedded file information during a scan.\n\n @param fd                  Current file descriptor which is about to be scanned.\n @param type                Current file type detected via magic - i.e. NOT on the fly - (e.g. \"CL_TYPE_MSEXE\").\n @param ancestors           An array of ancestors filenames of size `recursion_level`. filenames may be NULL.\n @param parent_file_size    Parent file size.\n @param file_name           Current file name, or NULL if the file does not have a name or ClamAV failed to record the name.\n @param file_size           Current file size.\n @param file_buffer         Current file buffer pointer.\n @param recursion_level     Recursion level / depth of the current file.\n @param layer_attributes    See LAYER_ATTRIBUTES_* flags.\n @param context             Opaque application provided data.\n @return                    CL_CLEAN = File is scanned.\n @return                    CL_BREAK = Whitelisted by callback - file is skipped and marked as clean.\n @return                    CL_VIRUS = Blacklisted by callback - file is skipped and marked as infected."]
pub type clcb_file_inspection = ::std::option::Option<
    unsafe extern "C" fn(
        fd: ::std::os::raw::c_int,
        type_: *const ::std::os::raw::c_char,
        ancestors: *mut *const ::std::os::raw::c_char,
        parent_file_size: usize,
        file_name: *const ::std::os::raw::c_char,
        file_size: usize,
        file_buffer: *const ::std::os::raw::c_char,
        recursion_level: u32,
        layer_attributes: u32,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t,
>;
extern "C" {
    #[doc = " @brief Set a custom file inspection callback function.\n\n DISCLAIMER: This interface is to be considered unstable while we continue to evaluate it.\n We may change this interface in the future.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer."]
    pub fn cl_engine_set_clcb_file_inspection(
        engine: *mut cl_engine,
        callback: clcb_file_inspection,
    );
}
#[doc = " @brief Pre-scan callback.\n\n Called for each NEW file (inner and outer) before the scanning takes place. This is\n roughly the same as clcb_before_cache, but it is affected by clean file caching.\n This means that it won't be called if a clean cached file (inner or outer) is\n scanned a second time.\n\n @param fd        File descriptor which is about to be scanned.\n @param type      File type detected via magic - i.e. NOT on the fly - (e.g. \"CL_TYPE_MSEXE\").\n @param context   Opaque application provided data.\n @return          CL_CLEAN = File is scanned.\n @return          CL_BREAK = Allowed by callback - file is skipped and marked as clean.\n @return          CL_VIRUS = Blocked by callback - file is skipped and marked as infected."]
pub type clcb_pre_scan = ::std::option::Option<
    unsafe extern "C" fn(
        fd: ::std::os::raw::c_int,
        type_: *const ::std::os::raw::c_char,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t,
>;
extern "C" {
    #[doc = " @brief Set a custom pre-scan callback function.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer."]
    pub fn cl_engine_set_clcb_pre_scan(engine: *mut cl_engine, callback: clcb_pre_scan);
}
#[doc = " @brief Post-scan callback.\n\n Called for each processed file (inner and outer), after the scanning is complete.\n In all-match mode, the virname will be one of the matches, but there is no\n guarantee in which order the matches will occur, thus the final virname may\n be any one of the matches.\n\n @param fd        File descriptor which was scanned.\n @param result    The scan result for the file.\n @param virname   A signature name if there was one or more matches.\n @param context   Opaque application provided data.\n @return          Scan result is not overridden.\n @return          CL_BREAK = Allowed by callback - scan result is set to CL_CLEAN.\n @return          Blocked by callback - scan result is set to CL_VIRUS."]
pub type clcb_post_scan = ::std::option::Option<
    unsafe extern "C" fn(
        fd: ::std::os::raw::c_int,
        result: ::std::os::raw::c_int,
        virname: *const ::std::os::raw::c_char,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t,
>;
extern "C" {
    #[doc = " @brief Set a custom post-scan callback function.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer."]
    pub fn cl_engine_set_clcb_post_scan(engine: *mut cl_engine, callback: clcb_post_scan);
}
#[doc = " @brief Virus-found callback.\n\n Called for each signature match.\n If all-match is enabled, clcb_virus_found() may be called multiple times per\n scan.\n\n In addition, clcb_virus_found() does not have a return value and thus.\n can not be used to ignore the match.\n\n @param fd        File descriptor which was scanned.\n @param virname   Virus name.\n @param context   Opaque application provided data."]
pub type clcb_virus_found = ::std::option::Option<
    unsafe extern "C" fn(
        fd: ::std::os::raw::c_int,
        virname: *const ::std::os::raw::c_char,
        context: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[doc = " @brief Set a custom virus-found callback function.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer."]
    pub fn cl_engine_set_clcb_virus_found(engine: *mut cl_engine, callback: clcb_virus_found);
}
#[doc = " @brief Signature-load callback.\n\n May be used to ignore signatures at database load time.\n\n WARNING: Some signatures (notably ldb, cbc) can be dependent upon other signatures.\n          Failure to preserve dependency chains will result in database loading failure.\n          It is the implementor's responsibility to guarantee consistency.\n\n @param type      The signature type (e.g. \"db\", \"ndb\", \"mdb\", etc.)\n @param name      Signature name.\n @param custom    The signature is official (custom == 0) or custom (custom != 0)\n @param context   Opaque application provided data\n @return          0 to load the current signature.\n @return          Non-0 to skip the current signature."]
pub type clcb_sigload = ::std::option::Option<
    unsafe extern "C" fn(
        type_: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        custom: ::std::os::raw::c_uint,
        context: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    #[doc = " @brief Set a custom signature-load callback function.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer.\n @param context   Opaque application provided data."]
    pub fn cl_engine_set_clcb_sigload(
        engine: *mut cl_engine,
        callback: clcb_sigload,
        context: *mut ::std::os::raw::c_void,
    );
}
impl cl_msg {
    pub const CL_MSG_INFO_VERBOSE: cl_msg = cl_msg(32);
}
impl cl_msg {
    pub const CL_MSG_WARN: cl_msg = cl_msg(64);
}
impl cl_msg {
    pub const CL_MSG_ERROR: cl_msg = cl_msg(128);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct cl_msg(pub ::std::os::raw::c_uint);
#[doc = " @brief Progress callback for sig-load, engine-compile, and engine-free.\n\n Progress is complete when total_items == now_completed.\n\n Note: The callback should return CL_SUCCESS. We reserve the right to have it\n       cancel the operation in the future if you return something else...\n       ... but for now, the return value will be ignored.\n\n @param total_items   Total number of items\n @param now_completed Number of items completed\n @param context       Opaque application provided data\n @return cl_error_t   reserved for future use"]
pub type clcb_progress = ::std::option::Option<
    unsafe extern "C" fn(
        total_items: usize,
        now_completed: usize,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t,
>;
extern "C" {
    #[doc = " @brief Set a progress callback function to be called incrementally during a\n database load.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine\n @param callback  The callback function pointer\n @param context   Opaque application provided data"]
    pub fn cl_engine_set_clcb_sigload_progress(
        engine: *mut cl_engine,
        callback: clcb_progress,
        context: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = " @brief Set a progress callback function to be called incrementally during an\n engine compile.\n\n Disclaimer: the number of items for this is a rough estimate of the items that\n tend to take longest to compile and doesn't represent an accurate number of\n things compiled.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine\n @param callback  The callback function pointer\n @param context   Opaque application provided data"]
    pub fn cl_engine_set_clcb_engine_compile_progress(
        engine: *mut cl_engine,
        callback: clcb_progress,
        context: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = " @brief Set a progress callback function to be called incrementally during an\n engine free (if the engine is in fact freed).\n\n Disclaimer: the number of items for this is a rough estimate of the items that\n tend to take longest to free and doesn't represent an accurate number of\n things freed.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine\n @param callback  The callback function pointer\n @param context   Opaque application provided data"]
    pub fn cl_engine_set_clcb_engine_free_progress(
        engine: *mut cl_engine,
        callback: clcb_progress,
        context: *mut ::std::os::raw::c_void,
    );
}
